istio/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: socket-io-app-svc
  # annotations:
#   alb.ingress.kubernetes.io/healthcheck-path: /user
spec:
  type: ClusterIP
  selector:
    app: code-sync-app
    version: v1
    istio: monitor
  ports:
  - name: http
    port: 5000
    targetPort: 5000
