istio/destination.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: code-sync-app
spec:
  host: code-sync-app
  subsets:
  - name: v1
    labels:
      app: code-sync-app
      version: v1
  # - name: v2
#   labels:
#     app: ua-app
#     version: v2
